# pdaj_vezbe

./: README.md  vezbe1.rst  vezbe2.rst  vezbe3.rst
Vezbe2/: comprehension.py  gen_iter.py  tracem.py
Vezbe3/: main.py  pyproject.toml  time.py
Vezbe4/: Dockerfile  pyproject.toml
Vezbe4/MPI/: main.py  pyproject.toml
Vezbe5/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
Vezbe5/celery_app/celery_app/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
