[tool.poetry]
name = "pdaj_docker"
version = "0.1.0"
description = ""
authors = ["Milena Vujicic <vujicic_milena@uns.ac.rs>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
